fix: fixed tags overlapping

--- a/src/webui/components/Package/package.scss
+++ b/src/webui/components/Package/package.scss
@@ -20,7 +20,6 @@
 
   .tags {
     margin: 0 0.5em 0.5em 0;
-    white-space: nowrap;
     font-size: $font-size-sm;
     :global {
       .el-tag {
